Update project structure: enhance CMake configuration, add README and config files, and improve .gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,26 @@
 project(ParallemProgrammingFinal LANGUAGES C CXX CUDA)
 cmake_minimum_required(VERSION 3.18)
 
-# Thêm thư mục include/
-include_directories(${CMAKE_SOURCE_DIR}/include)
-
-# Lấy tất cả file .cu và .cpp trong src/
+# find all source files
 file(GLOB SOURCES src/*.cu src/*.cpp)
 
-# Tạo executable
+# set DATA_DIR macro
+set(DATA_DIR "${CMAKE_SOURCE_DIR}/data")
+configure_file(
+    ${CMAKE_SOURCE_DIR}/config.h.in
+    ${CMAKE_BINARY_DIR}/config.h
+)
+
+# make compile_commands.json
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+# make executable
 set(CMAKE_CUDA_ARCHITECTURES 61 75)
 add_executable(extract_features ${SOURCES})
+
+target_include_directories(
+	extract_features 
+	PRIVATE
+    ${CMAKE_SOURCE_DIR}/include
+    ${CMAKE_BINARY_DIR}   # for config.h
+)
