--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,12 @@
 project(ParallemProgrammingFinal LANGUAGES C CXX CUDA)
 cmake_minimum_required(VERSION 3.18)
 
+# Enable optimizations
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -fopenmp")
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3")
+
 # find all source files
 file(GLOB SOURCES src/*.cu src/*.cpp)
-
-# set DATA_DIR macro
-set(DATA_DIR "${CMAKE_SOURCE_DIR}/data")
-configure_file(
-    ${CMAKE_SOURCE_DIR}/config.h.in
-    ${CMAKE_BINARY_DIR}/config.h
-)
 
 # make compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -22,5 +19,4 @@ target_include_directories(
 	extract_features 
 	PRIVATE
     ${CMAKE_SOURCE_DIR}/include
-    ${CMAKE_BINARY_DIR}   # for config.h
 )
